<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="recipient_messages">Messages: %1$d</string>
    <string name="recipient_files">Attachments: %1$d</string>
    <string name="recipient_hide_author">Hide sender names</string>
    <string name="recipient_comment">Add a comment</string>
    <string name="recipient_send">Send (%1$d)</string>
    <string name="recipient_sending">Sending: %1$d of %2$d</string>
    <string name="recipient_error">Could not finish. Try again to continue</string>
    <string name="recipient_retry">Retry</string>
    <string name="recipient_interrupted">Sending was interrupted. Check the destination chats before sending again</string>
    <string name="app_name">Monogram</string>
    <string name="app_description">Unofficial Telegram client</string>
    <string name="home_tab_chats">Chats</string>
    <string name="home_tab_folders">Folders</string>
    <string name="select_chat">Select a Chat</string>
    <string name="push_group_chats">Chats</string>
    <string name="push_group_stories">Stories</string>
    <string name="push_group_reactions">Reactions</string>
    <string name="push_group_folders">Folders</string>
    <string name="push_channel_private">Private chats</string>
    <string name="push_channel_groups">Groups</string>
    <string name="push_channel_channels">Channels</string>
    <string name="push_channel_other">Other</string>
    <string name="push_channel_calls">Calls</string>
    <string name="push_channel_stories">Stories</string>
    <string name="push_channel_reactions">Reactions</string>
    <string name="push_folder">Folder %1$d</string>
    <string name="push_hidden_title">Telegram</string>
    <string name="push_hidden_body">New message</string>
    <string name="push_you">You</string>
    <string name="push_reply">Reply</string>
    <string name="push_reply_hint">Message</string>
    <string name="push_mark_read">Mark as Read</string>
    <string name="push_not_sent">Not sent</string>
    <string name="push_mute_hour">Mute for 1 hour</string>
    <string name="push_notification_settings">Notification settings</string>
    <string name="push_open_link">Open link</string>
    <string name="push_more_chats">+%1$d more</string>
    <plurals name="push_new_messages">
        <item quantity="one">%1$d new message</item>
        <item quantity="other">%1$d new messages</item>
    </plurals>
    <string name="crash_title">Something went wrong</string>
    <string name="crash_subtitle">Monogram hit an unexpected error. The report below helps fix it</string>
    <string name="crash_log_label">Crash log</string>
    <string name="crash_copy">Copy details</string>
    <string name="crash_copied">Crash details copied</string>
    <string name="crash_share">Share</string>
    <string name="crash_share_title">Share crash report</string>
    <string name="crash_restart">Restart Monogram</string>
    <string name="update_prompt_title">Update to %1$s</string>
    <string name="update_prompt_body">A new build is ready. Download size %1$s</string>
    <string name="update_prompt_skip">Skip</string>
    <string name="update_prompt_update">Update</string>
    <string name="update_prompt_hide">Hide</string>
    <string name="update_prompt_progress">Downloading %1$s / %2$s</string>
    <string name="update_prompt_install">Install</string>
    <string name="update_prompt_ready">Ready to install</string>
    <string name="update_prompt_installing">Installing update</string>
    <string name="update_prompt_installing_body">%1$s is being installed</string>
    <string name="update_prompt_error">Couldn\'t download the update</string>
    <string name="update_prompt_retry">Retry</string>
</resources>
